# drawiterm

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  SPEC.md  flake.nix  pyproject.toml
.claude/agent-memory/requirements-system-designer/: MEMORY.md  decision_data_model.md  decision_tui_library.md  project_constraints.md  project_vision.md  requirements_v1_scope.md  user_profile.md
.claude/agents/: requirements-system-designer.md
.github/workflows/: ci.yml  release.yml
nix/: common.nix  drawiterm.nix
scripts/: __init__.py  bump_version.py
src/drawiterm/: __init__.py  __main__.py  app.py  commands.py  file_io.py  models.py  painter.py  tool_controller.py
src/drawiterm/widgets/: canvas.py  statusbar.py  toolbar.py
tests/: test_bump_version.py  test_cli.py  test_commands.py  test_file_io.py  test_models.py  test_models_more.py  test_painter.py  test_painter_more.py  test_tool_controller.py  test_undo_stack.py
