[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drawiterm"
version = "0.1.0-beta"
description = "Excalidraw-style system design sketching tool for the terminal"
requires-python = ">=3.12"
dependencies = [
  "textual >= 3.2.0",
  "rich >= 14.1.0",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
  "pytest-cov",
  "pre-commit",
]

[project.scripts]
drawiterm = "drawiterm.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]  # flake8 errors + import sort
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
