[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drawiterm"
version = "0.1.5"
description = "Excalidraw-style system design sketching tool for the terminal"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [{ name = "Donovan M" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Topic :: Terminals",
]
requires-python = ">=3.12"
dependencies = [
  "textual >= 3.2.0",
  "rich >= 14.1.0",
]
urls = { Homepage = "https://github.com/dmille56/drawiterm", Repository = "https://github.com/dmille56/drawiterm", Issues = "https://github.com/dmille56/drawiterm/issues" }

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
  "pytest-cov",
  "pre-commit",
]

[project.scripts]
drawiterm = "drawiterm.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]  # flake8 errors + import sort
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
